--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <body>
        {% include header.html %}
        <main>
-            <h2>Ma page</h2>
+           {{content}}
        </main>
        {% include footer.html %}
     </body>
