--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,9 @@
     <head>
         <meta charset="utf-8"/>
         <title> J'ai kill</title>
+        <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+        <link rel="stylesheet" type="text/css" href="../css/modern-business.css">
+        <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     </head>
     <body>
        {% include header.html %}
