--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,6 +10,7 @@
        {% include header.html %}
        <main>
            {{content}}
+           {% include article.html %}
        </main>
        {% include footer.html %}
     </body>
