--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,4 +1,12 @@
+ <head>
+    <meta charset="utf-8"/>
+    <title> J'ai kill</title>
+    <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
+    <link rel="stylesheet" type="text/css" href="../css/modern-business.css">
+    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+</<html>
  <!-- Page Content -->
+ <body>
     <div class="container">
 
         <!-- Page Heading/Breadcrumbs -->
@@ -93,7 +101,7 @@
 
         </div>
         <!-- /.row -->
-
+</body>
         <hr>
 
         <!-- Footer -->
@@ -107,3 +115,4 @@
 
     </div>
     <!-- /.container -->
+</html>
