--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,7 +21,7 @@
                         <a href="services.html">Services</a>
                     </li>
                     <li>
-                        <a href="../_includes/contact.html">Contact</a>
+                        <a href="contact.html">Contact</a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">Portfolio <b class="caret"></b></a>
