--- a/_layouts/article.html
+++ b/_layouts/article.html
@@ -4,7 +4,7 @@
             <h4><i class="fa fa-fw fa-check"></i>{{ post.title }}</h4>
         </div>
         <div class="panel-body">
-            <p>{{ content }}</p>
+            <p>{{ post.content }}</p>
                 <a href="#" class="btn btn-default">Learn More</a>
         </div>
     </div>
