--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <meta charset="utf-8"/>
-        <title> J'ai kill</title>
+        <title> Maxime Cazaillon</title>
         <link rel="stylesheet" type="text/css" href="../css/bootstrap.css">
         <link rel="stylesheet" type="text/css" href="../css/modern-business.css">
         <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
