--- a/_includes/slider.html
+++ b/_includes/slider.html
@@ -10,7 +10,7 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner">
             <div class="item active">
-                <div class="fill" style="background-image:url('../images/Slider_1.png');"></div>
+                <div class="fill" style="background-image:url('../images/Slider_1.jpg');"></div>
                 <div class="carousel-caption">
                     <h2>Aux saveurs de Jhelum</h2>
                 </div>
@@ -27,6 +27,7 @@
                     <h2>CV Origamie</h2>
                 </div>
             </div>
+            
         </div>
 
         <!-- Controls -->
